--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Oi bylat!</title>
     <link rel="icon" href="/images/modcheck-discord.gif" type="image/gif" />
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/screen.css">
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/screen.css" />
 
     <script src="assets/js/script.js"></script>
-
-</head>
-<body>
-<header>
-    <div>
+  </head>
+  <body>
+    <header>
+      <div>
         <h1>Hi this is the holy website of Jurgini!</h1>
-        <a id="secret-page" href="https://jurgini.github.io/main/secret.html">Maybe click here or whatever!</a>
-    </div>
-</header>
-<main>
+        <a id="secret-page" href="secret.html">Maybe click here or whatever!</a>
+      </div>
+    </header>
+    <main>
+      <video src="images/Rick-Roll.mp4" autoplay controls></video>
 
-
-    <video src="images/Rick-Roll.mp4" autoplay controls></video>
-
-    <aside>
+      <aside>
         <p></p>
-    </aside>
-
-</main>
-</body>
+      </aside>
+    </main>
+  </body>
 </html>
